// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectInspector - classnames has the expected class 1`] = `
<div
  className="tree object-inspector"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  role="tree"
  style={Object {}}
  tabIndex="0"
>
  <div
    aria-level={1}
    className="tree-node"
    data-expandable={false}
    id="root"
    onClick={[Function]}
    onKeyDownCapture={null}
    role="treeitem"
  >
    <div
      className="node object-node"
      onClick={[Function]}
    >
      <span
        className="object-label"
      >
        root
      </span>
      <span
        className="object-delimiter"
      >
        : 
      </span>
      <span
        className="objectBox objectBox-number"
      >
        42
      </span>
    </div>
  </div>
</div>
`;

exports[`ObjectInspector - classnames has the inline class when inline prop is true 1`] = `
<div
  className="tree inline object-inspector"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  role="tree"
  style={Object {}}
  tabIndex="0"
>
  <div
    aria-level={1}
    className="tree-node"
    data-expandable={false}
    id="root"
    onClick={[Function]}
    onKeyDownCapture={null}
    role="treeitem"
  >
    <div
      className="node object-node"
      onClick={[Function]}
    >
      <span
        className="object-label"
      >
        root
      </span>
      <span
        className="object-delimiter"
      >
        : 
      </span>
      <span
        className="objectBox objectBox-number"
      >
        42
      </span>
    </div>
  </div>
</div>
`;

exports[`ObjectInspector - classnames has the nowrap class when disableWrap prop is true 1`] = `
<div
  className="tree nowrap object-inspector"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  role="tree"
  style={Object {}}
  tabIndex="0"
>
  <div
    aria-level={1}
    className="tree-node"
    data-expandable={false}
    id="root"
    onClick={[Function]}
    onKeyDownCapture={null}
    role="treeitem"
  >
    <div
      className="node object-node"
      onClick={[Function]}
    >
      <span
        className="object-label"
      >
        root
      </span>
      <span
        className="object-delimiter"
      >
        : 
      </span>
      <span
        className="objectBox objectBox-number"
      >
        42
      </span>
    </div>
  </div>
</div>
`;
